[package]
name = "hrblwp-conn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = { version = "0.10.7", default-features = false }
hrblwp-core.workspace = true
hrblwp-proto.workspace = true
log = { version = "0.4.20", default-features = false }
strobe-rs = "0.8.1"
