[package]
name = "hrblwp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.1.2", default-features = false }
k256 = { version = "0.13.3", default-features = false, features = ["ecdh"] }
seq-macro = "0.3.5"
